parser.output
Grammar

    0 $accept: function $end

    1 function: function_header optional_variable body

    2 function_header: FUNCTION IDENTIFIER RETURNS type ';'

    3 type: INTEGER
    4     | CHARACTER
    5     | REAL

    6 optional_variable: variable
    7                  | ε

    8 variable: IDENTIFIER ':' type IS statement ';'
    9         | IDENTIFIER ':' LIST OF type IS list ';'

   10 list: '(' expressions ')'

   11 expressions: expressions ',' expression
   12            | expression

   13 body: BEGIN_ statement_ END ';'

   14 statement_: statement ';'
   15           | error ';'

   16 statement: expression
   17          | WHEN or_condition ',' expression ':' expression
   18          | SWITCH expression IS cases OTHERS ARROW statement ';' ENDSWITCH
   19          | IF or_condition THEN statement_ elsif_clauses ELSE statement_ ENDIF

   20 elsif_clauses: elsif_clauses elsif_clause
   21              | ε

   22 elsif_clause: ELSIF or_condition THEN statement_

   23 cases: cases case_
   24      | ε

   25 case_: case
   26      | error ';'

   27 case: CASE INT_LITERAL ARROW statement ';'

   28 or_condition: or_condition OROP condition
   29             | condition

   30 condition: condition ANDOP not_condition
   31          | not_condition

   32 not_condition: NOTOP relation
   33              | relation

   34 relation: '(' or_condition ')'
   35         | expression RELOP expression

   36 expression: expression ADDOP term
   37           | term

   38 term: term MULOP exp_term
   39     | term MODOP exp_term
   40     | exp_term

   41 exp_term: neg_term EXPOP exp_term
   42         | neg_term

   43 neg_term: NEGOP primary
   44         | primary

   45 primary: '(' expression ')'
   46        | INT_LITERAL
   47        | CHAR_LITERAL
   48        | REAL_LITERAL
   49        | IDENTIFIER '(' expression ')'
   50        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 34 45 49
    ')' (41) 10 34 45 49
    ',' (44) 11 17
    ':' (58) 8 9 17
    ';' (59) 2 8 9 13 14 15 18 26 27
    error (256) 15 26
    IDENTIFIER <iden> (258) 2 8 9 49 50
    INT_LITERAL <type> (259) 27 46
    CHAR_LITERAL <type> (260) 47
    REAL_LITERAL <type> (261) 48
    ADDOP (262) 36
    MULOP (263) 38
    MODOP (264) 39
    EXPOP (265) 41
    ANDOP (266) 30
    OROP (267) 28
    RELOP (268) 35
    NEGOP (269) 43
    NOTOP (270) 32
    ARROW (271) 18 27
    BEGIN_ (272) 13
    CASE (273) 27
    CHARACTER (274) 4
    ELSE (275) 19
    ELSIF (276) 22
    END (277) 13
    ENDIF (278) 19
    ENDSWITCH (279) 18
    FUNCTION (280) 2
    IF (281) 19
    INTEGER (282) 3
    IS (283) 8 9 18
    LIST (284) 9
    OF (285) 9
    OTHERS (286) 18
    REAL (287) 5
    RETURNS (288) 2
    SWITCH (289) 18
    THEN (290) 19 22
    WHEN (291) 17


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    function (43)
        on left: 1
        on right: 0
    function_header (44)
        on left: 2
        on right: 1
    type <type> (45)
        on left: 3 4 5
        on right: 2 8 9
    optional_variable (46)
        on left: 6 7
        on right: 1
    variable (47)
        on left: 8 9
        on right: 6
    list <type> (48)
        on left: 10
        on right: 9
    expressions <type> (49)
        on left: 11 12
        on right: 10 11
    body <type> (50)
        on left: 13
        on right: 1
    statement_ <type> (51)
        on left: 14 15
        on right: 13 19 22
    statement <type> (52)
        on left: 16 17 18 19
        on right: 8 14 18 27
    elsif_clauses <type> (53)
        on left: 20 21
        on right: 19 20
    elsif_clause <type> (54)
        on left: 22
        on right: 20
    cases <type> (55)
        on left: 23 24
        on right: 18 23
    case_ <type> (56)
        on left: 25 26
        on right: 23
    case <type> (57)
        on left: 27
        on right: 25
    or_condition (58)
        on left: 28 29
        on right: 17 19 22 28 34
    condition (59)
        on left: 30 31
        on right: 28 29 30
    not_condition (60)
        on left: 32 33
        on right: 30 31
    relation (61)
        on left: 34 35
        on right: 32 33
    expression <type> (62)
        on left: 36 37
        on right: 11 12 16 17 18 35 36 45 49
    term <type> (63)
        on left: 38 39 40
        on right: 36 37 38 39
    exp_term <type> (64)
        on left: 41 42
        on right: 38 39 40 41
    neg_term <type> (65)
        on left: 43 44
        on right: 41 42
    primary <type> (66)
        on left: 45 46 47 48 49 50
        on right: 43 44


State 0

    0 $accept: • function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION • IDENTIFIER RETURNS type ';'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: function • $end

    $end  shift, and go to state 5


State 3

    1 function: function_header • optional_variable body

    IDENTIFIER  shift, and go to state 6

    $default  reduce using rule 7 (optional_variable)

    optional_variable  go to state 7
    variable           go to state 8


State 4

    2 function_header: FUNCTION IDENTIFIER • RETURNS type ';'

    RETURNS  shift, and go to state 9


State 5

    0 $accept: function $end •

    $default  accept


State 6

    8 variable: IDENTIFIER • ':' type IS statement ';'
    9         | IDENTIFIER • ':' LIST OF type IS list ';'

    ':'  shift, and go to state 10


State 7

    1 function: function_header optional_variable • body

    BEGIN_  shift, and go to state 11

    body  go to state 12


State 8

    6 optional_variable: variable •

    $default  reduce using rule 6 (optional_variable)


State 9

    2 function_header: FUNCTION IDENTIFIER RETURNS • type ';'

    CHARACTER  shift, and go to state 13
    INTEGER    shift, and go to state 14
    REAL       shift, and go to state 15

    type  go to state 16


State 10

    8 variable: IDENTIFIER ':' • type IS statement ';'
    9         | IDENTIFIER ':' • LIST OF type IS list ';'

    CHARACTER  shift, and go to state 13
    INTEGER    shift, and go to state 14
    LIST       shift, and go to state 17
    REAL       shift, and go to state 15

    type  go to state 18


State 11

   13 body: BEGIN_ • statement_ END ';'

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    IF            shift, and go to state 25
    SWITCH        shift, and go to state 26
    WHEN          shift, and go to state 27
    '('           shift, and go to state 28

    statement_  go to state 29
    statement   go to state 30
    expression  go to state 31
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 12

    1 function: function_header optional_variable body •

    $default  reduce using rule 1 (function)


State 13

    4 type: CHARACTER •

    $default  reduce using rule 4 (type)


State 14

    3 type: INTEGER •

    $default  reduce using rule 3 (type)


State 15

    5 type: REAL •

    $default  reduce using rule 5 (type)


State 16

    2 function_header: FUNCTION IDENTIFIER RETURNS type • ';'

    ';'  shift, and go to state 36


State 17

    9 variable: IDENTIFIER ':' LIST • OF type IS list ';'

    OF  shift, and go to state 37


State 18

    8 variable: IDENTIFIER ':' type • IS statement ';'

    IS  shift, and go to state 38


State 19

   15 statement_: error • ';'

    ';'  shift, and go to state 39


State 20

   49 primary: IDENTIFIER • '(' expression ')'
   50        | IDENTIFIER •

    '('  shift, and go to state 40

    $default  reduce using rule 50 (primary)


State 21

   46 primary: INT_LITERAL •

    $default  reduce using rule 46 (primary)


State 22

   47 primary: CHAR_LITERAL •

    $default  reduce using rule 47 (primary)


State 23

   48 primary: REAL_LITERAL •

    $default  reduce using rule 48 (primary)


State 24

   43 neg_term: NEGOP • primary

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    '('           shift, and go to state 28

    primary  go to state 41


State 25

   19 statement: IF • or_condition THEN statement_ elsif_clauses ELSE statement_ ENDIF

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 42
    '('           shift, and go to state 43

    or_condition   go to state 44
    condition      go to state 45
    not_condition  go to state 46
    relation       go to state 47
    expression     go to state 48
    term           go to state 32
    exp_term       go to state 33
    neg_term       go to state 34
    primary        go to state 35


State 26

   18 statement: SWITCH • expression IS cases OTHERS ARROW statement ';' ENDSWITCH

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 28

    expression  go to state 49
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 27

   17 statement: WHEN • or_condition ',' expression ':' expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 42
    '('           shift, and go to state 43

    or_condition   go to state 50
    condition      go to state 45
    not_condition  go to state 46
    relation       go to state 47
    expression     go to state 48
    term           go to state 32
    exp_term       go to state 33
    neg_term       go to state 34
    primary        go to state 35


State 28

   45 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 28

    expression  go to state 51
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 29

   13 body: BEGIN_ statement_ • END ';'

    END  shift, and go to state 52


State 30

   14 statement_: statement • ';'

    ';'  shift, and go to state 53


State 31

   16 statement: expression •
   36 expression: expression • ADDOP term

    ADDOP  shift, and go to state 54

    $default  reduce using rule 16 (statement)


State 32

   37 expression: term •
   38 term: term • MULOP exp_term
   39     | term • MODOP exp_term

    MULOP  shift, and go to state 55
    MODOP  shift, and go to state 56

    $default  reduce using rule 37 (expression)


State 33

   40 term: exp_term •

    $default  reduce using rule 40 (term)


State 34

   41 exp_term: neg_term • EXPOP exp_term
   42         | neg_term •

    EXPOP  shift, and go to state 57

    $default  reduce using rule 42 (exp_term)


State 35

   44 neg_term: primary •

    $default  reduce using rule 44 (neg_term)


State 36

    2 function_header: FUNCTION IDENTIFIER RETURNS type ';' •

    $default  reduce using rule 2 (function_header)


State 37

    9 variable: IDENTIFIER ':' LIST OF • type IS list ';'

    CHARACTER  shift, and go to state 13
    INTEGER    shift, and go to state 14
    REAL       shift, and go to state 15

    type  go to state 58


State 38

    8 variable: IDENTIFIER ':' type IS • statement ';'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    IF            shift, and go to state 25
    SWITCH        shift, and go to state 26
    WHEN          shift, and go to state 27
    '('           shift, and go to state 28

    statement   go to state 59
    expression  go to state 31
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 39

   15 statement_: error ';' •

    $default  reduce using rule 15 (statement_)


State 40

   49 primary: IDENTIFIER '(' • expression ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 28

    expression  go to state 60
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 41

   43 neg_term: NEGOP primary •

    $default  reduce using rule 43 (neg_term)


State 42

   32 not_condition: NOTOP • relation

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 43

    relation    go to state 61
    expression  go to state 48
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 43

   34 relation: '(' • or_condition ')'
   45 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 42
    '('           shift, and go to state 43

    or_condition   go to state 62
    condition      go to state 45
    not_condition  go to state 46
    relation       go to state 47
    expression     go to state 63
    term           go to state 32
    exp_term       go to state 33
    neg_term       go to state 34
    primary        go to state 35


State 44

   19 statement: IF or_condition • THEN statement_ elsif_clauses ELSE statement_ ENDIF
   28 or_condition: or_condition • OROP condition

    OROP  shift, and go to state 64
    THEN  shift, and go to state 65


State 45

   29 or_condition: condition •
   30 condition: condition • ANDOP not_condition

    ANDOP  shift, and go to state 66

    $default  reduce using rule 29 (or_condition)


State 46

   31 condition: not_condition •

    $default  reduce using rule 31 (condition)


State 47

   33 not_condition: relation •

    $default  reduce using rule 33 (not_condition)


State 48

   35 relation: expression • RELOP expression
   36 expression: expression • ADDOP term

    ADDOP  shift, and go to state 54
    RELOP  shift, and go to state 67


State 49

   18 statement: SWITCH expression • IS cases OTHERS ARROW statement ';' ENDSWITCH
   36 expression: expression • ADDOP term

    ADDOP  shift, and go to state 54
    IS     shift, and go to state 68


State 50

   17 statement: WHEN or_condition • ',' expression ':' expression
   28 or_condition: or_condition • OROP condition

    OROP  shift, and go to state 64
    ','   shift, and go to state 69


State 51

   36 expression: expression • ADDOP term
   45 primary: '(' expression • ')'

    ADDOP  shift, and go to state 54
    ')'    shift, and go to state 70


State 52

   13 body: BEGIN_ statement_ END • ';'

    ';'  shift, and go to state 71


State 53

   14 statement_: statement ';' •

    $default  reduce using rule 14 (statement_)


State 54

   36 expression: expression ADDOP • term

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 28

    term      go to state 72
    exp_term  go to state 33
    neg_term  go to state 34
    primary   go to state 35


State 55

   38 term: term MULOP • exp_term

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 28

    exp_term  go to state 73
    neg_term  go to state 34
    primary   go to state 35


State 56

   39 term: term MODOP • exp_term

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 28

    exp_term  go to state 74
    neg_term  go to state 34
    primary   go to state 35


State 57

   41 exp_term: neg_term EXPOP • exp_term

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 28

    exp_term  go to state 75
    neg_term  go to state 34
    primary   go to state 35


State 58

    9 variable: IDENTIFIER ':' LIST OF type • IS list ';'

    IS  shift, and go to state 76


State 59

    8 variable: IDENTIFIER ':' type IS statement • ';'

    ';'  shift, and go to state 77


State 60

   36 expression: expression • ADDOP term
   49 primary: IDENTIFIER '(' expression • ')'

    ADDOP  shift, and go to state 54
    ')'    shift, and go to state 78


State 61

   32 not_condition: NOTOP relation •

    $default  reduce using rule 32 (not_condition)


State 62

   28 or_condition: or_condition • OROP condition
   34 relation: '(' or_condition • ')'

    OROP  shift, and go to state 64
    ')'   shift, and go to state 79


State 63

   35 relation: expression • RELOP expression
   36 expression: expression • ADDOP term
   45 primary: '(' expression • ')'

    ADDOP  shift, and go to state 54
    RELOP  shift, and go to state 67
    ')'    shift, and go to state 70


State 64

   28 or_condition: or_condition OROP • condition

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 42
    '('           shift, and go to state 43

    condition      go to state 80
    not_condition  go to state 46
    relation       go to state 47
    expression     go to state 48
    term           go to state 32
    exp_term       go to state 33
    neg_term       go to state 34
    primary        go to state 35


State 65

   19 statement: IF or_condition THEN • statement_ elsif_clauses ELSE statement_ ENDIF

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    IF            shift, and go to state 25
    SWITCH        shift, and go to state 26
    WHEN          shift, and go to state 27
    '('           shift, and go to state 28

    statement_  go to state 81
    statement   go to state 30
    expression  go to state 31
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 66

   30 condition: condition ANDOP • not_condition

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 42
    '('           shift, and go to state 43

    not_condition  go to state 82
    relation       go to state 47
    expression     go to state 48
    term           go to state 32
    exp_term       go to state 33
    neg_term       go to state 34
    primary        go to state 35


State 67

   35 relation: expression RELOP • expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 28

    expression  go to state 83
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 68

   18 statement: SWITCH expression IS • cases OTHERS ARROW statement ';' ENDSWITCH

    $default  reduce using rule 24 (cases)

    cases  go to state 84


State 69

   17 statement: WHEN or_condition ',' • expression ':' expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 28

    expression  go to state 85
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 70

   45 primary: '(' expression ')' •

    $default  reduce using rule 45 (primary)


State 71

   13 body: BEGIN_ statement_ END ';' •

    $default  reduce using rule 13 (body)


State 72

   36 expression: expression ADDOP term •
   38 term: term • MULOP exp_term
   39     | term • MODOP exp_term

    MULOP  shift, and go to state 55
    MODOP  shift, and go to state 56

    $default  reduce using rule 36 (expression)


State 73

   38 term: term MULOP exp_term •

    $default  reduce using rule 38 (term)


State 74

   39 term: term MODOP exp_term •

    $default  reduce using rule 39 (term)


State 75

   41 exp_term: neg_term EXPOP exp_term •

    $default  reduce using rule 41 (exp_term)


State 76

    9 variable: IDENTIFIER ':' LIST OF type IS • list ';'

    '('  shift, and go to state 86

    list  go to state 87


State 77

    8 variable: IDENTIFIER ':' type IS statement ';' •

    $default  reduce using rule 8 (variable)


State 78

   49 primary: IDENTIFIER '(' expression ')' •

    $default  reduce using rule 49 (primary)


State 79

   34 relation: '(' or_condition ')' •

    $default  reduce using rule 34 (relation)


State 80

   28 or_condition: or_condition OROP condition •
   30 condition: condition • ANDOP not_condition

    ANDOP  shift, and go to state 66

    $default  reduce using rule 28 (or_condition)


State 81

   19 statement: IF or_condition THEN statement_ • elsif_clauses ELSE statement_ ENDIF

    $default  reduce using rule 21 (elsif_clauses)

    elsif_clauses  go to state 88


State 82

   30 condition: condition ANDOP not_condition •

    $default  reduce using rule 30 (condition)


State 83

   35 relation: expression RELOP expression •
   36 expression: expression • ADDOP term

    ADDOP  shift, and go to state 54

    $default  reduce using rule 35 (relation)


State 84

   18 statement: SWITCH expression IS cases • OTHERS ARROW statement ';' ENDSWITCH
   23 cases: cases • case_

    error   shift, and go to state 89
    CASE    shift, and go to state 90
    OTHERS  shift, and go to state 91

    case_  go to state 92
    case   go to state 93


State 85

   17 statement: WHEN or_condition ',' expression • ':' expression
   36 expression: expression • ADDOP term

    ADDOP  shift, and go to state 54
    ':'    shift, and go to state 94


State 86

   10 list: '(' • expressions ')'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 28

    expressions  go to state 95
    expression   go to state 96
    term         go to state 32
    exp_term     go to state 33
    neg_term     go to state 34
    primary      go to state 35


State 87

    9 variable: IDENTIFIER ':' LIST OF type IS list • ';'

    ';'  shift, and go to state 97


State 88

   19 statement: IF or_condition THEN statement_ elsif_clauses • ELSE statement_ ENDIF
   20 elsif_clauses: elsif_clauses • elsif_clause

    ELSE   shift, and go to state 98
    ELSIF  shift, and go to state 99

    elsif_clause  go to state 100


State 89

   26 case_: error • ';'

    ';'  shift, and go to state 101


State 90

   27 case: CASE • INT_LITERAL ARROW statement ';'

    INT_LITERAL  shift, and go to state 102


State 91

   18 statement: SWITCH expression IS cases OTHERS • ARROW statement ';' ENDSWITCH

    ARROW  shift, and go to state 103


State 92

   23 cases: cases case_ •

    $default  reduce using rule 23 (cases)


State 93

   25 case_: case •

    $default  reduce using rule 25 (case_)


State 94

   17 statement: WHEN or_condition ',' expression ':' • expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 28

    expression  go to state 104
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 95

   10 list: '(' expressions • ')'
   11 expressions: expressions • ',' expression

    ')'  shift, and go to state 105
    ','  shift, and go to state 106


State 96

   12 expressions: expression •
   36 expression: expression • ADDOP term

    ADDOP  shift, and go to state 54

    $default  reduce using rule 12 (expressions)


State 97

    9 variable: IDENTIFIER ':' LIST OF type IS list ';' •

    $default  reduce using rule 9 (variable)


State 98

   19 statement: IF or_condition THEN statement_ elsif_clauses ELSE • statement_ ENDIF

    error         shift, and go to state 19
    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    IF            shift, and go to state 25
    SWITCH        shift, and go to state 26
    WHEN          shift, and go to state 27
    '('           shift, and go to state 28

    statement_  go to state 107
    statement   go to state 30
    expression  go to state 31
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 99

   22 elsif_clause: ELSIF • or_condition THEN statement_

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    NOTOP         shift, and go to state 42
    '('           shift, and go to state 43

    or_condition   go to state 108
    condition      go to state 45
    not_condition  go to state 46
    relation       go to state 47
    expression     go to state 48
    term           go to state 32
    exp_term       go to state 33
    neg_term       go to state 34
    primary        go to state 35


State 100

   20 elsif_clauses: elsif_clauses elsif_clause •

    $default  reduce using rule 20 (elsif_clauses)


State 101

   26 case_: error ';' •

    $default  reduce using rule 26 (case_)


State 102

   27 case: CASE INT_LITERAL • ARROW statement ';'

    ARROW  shift, and go to state 109


State 103

   18 statement: SWITCH expression IS cases OTHERS ARROW • statement ';' ENDSWITCH

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    IF            shift, and go to state 25
    SWITCH        shift, and go to state 26
    WHEN          shift, and go to state 27
    '('           shift, and go to state 28

    statement   go to state 110
    expression  go to state 31
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 104

   17 statement: WHEN or_condition ',' expression ':' expression •
   36 expression: expression • ADDOP term

    ADDOP  shift, and go to state 54

    $default  reduce using rule 17 (statement)


State 105

   10 list: '(' expressions ')' •

    $default  reduce using rule 10 (list)


State 106

   11 expressions: expressions ',' • expression

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    '('           shift, and go to state 28

    expression  go to state 111
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 107

   19 statement: IF or_condition THEN statement_ elsif_clauses ELSE statement_ • ENDIF

    ENDIF  shift, and go to state 112


State 108

   22 elsif_clause: ELSIF or_condition • THEN statement_
   28 or_condition: or_condition • OROP condition

    OROP  shift, and go to state 64
    THEN  shift, and go to state 113


State 109

   27 case: CASE INT_LITERAL ARROW • statement ';'

    IDENTIFIER    shift, and go to state 20
    INT_LITERAL   shift, and go to state 21
    CHAR_LITERAL  shift, and go to state 22
    REAL_LITERAL  shift, and go to state 23
    NEGOP         shift, and go to state 24
    IF            shift, and go to state 25
    SWITCH        shift, and go to state 26
    WHEN          shift, and go to state 27
    '('           shift, and go to state 28

    statement   go to state 114
    expression  go to state 31
    term        go to state 32
    exp_term    go to state 33
    neg_term    go to state 34
    primary     go to state 35


State 110

   18 statement: SWITCH expression IS cases OTHERS ARROW statement • ';' ENDSWITCH

    ';'  shift, and go to state 115


State 111

   11 expressions: expressions ',' expression •
   36 expression: expression • ADDOP term

    ADDOP  shift, and go to state 54

    $default  reduce using rule 11 (expressions)


State 112

   19 statement: IF or_condition THEN statement_ elsif_clauses ELSE statement_ ENDIF •

    $default  reduce using rule 19 (statement)


State 113

   22 elsif_clause: ELSIF or_condition THEN • statement_
